--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,13 +9,14 @@ html {
 
 body {
   font-family: sans-serif;
+  font-size: 2.5vw
 }
 
 .header {
     background-color: #f8f8f8;
     border: 2px solid #e7e7e7;
     padding: .5em;
-    font-size: 1.5em;
+    font-size: 0.75em;
     display: flex;
     justify-content: space-between;
 }
